--- a/index.html
+++ b/index.html
@@ -46,6 +46,26 @@
           
         </div>
       </div>
+      <div class="team">
+        <h2>Our Team</h2>
+        <div class="container-team">
+          <div class="sub-team">
+            <img src="https://content.codecademy.com/PRO/independent-practice-projects/flexbox-business-site/img/employee-one.jpg" id="img" alt="">
+            <p>Lisa Fischer</p>
+            <p>C.E.O. -Founder and Principal Investor</p>
+          </div>
+          <div class="sub-team">
+            <img src="https://content.codecademy.com/PRO/independent-practice-projects/flexbox-business-site/img/employee-two.jpg" id="img" alt="">
+            <p>Alex Lasker</p>
+            <p>Partner-Research & Development</p>
+          </div>
+          <div class="sub-team">
+            <img src="https://content.codecademy.com/PRO/independent-practice-projects/flexbox-business-site/img/employee-three.jpg" id="img" alt="">
+            <p>Omar Carlsen</p>
+            <p>Partner-Partnerships & Marketing</p>
+          </div>
+        </div>
+      </div>
     </main>
   </header>
 </body>
